# 25-e-Qd4310-

./: .gitignore  AGENTS.md  README.md
.agents/skills/embedded-control-review/: SKILL.md
.agents/skills/embedded-control-review/agents/: openai.yaml
.agents/skills/vision-mcu-integration/: SKILL.md
.agents/skills/vision-mcu-integration/agents/: openai.yaml
docs/: control_refactor_plan.md  maixcam2_stm32_uart_protocol_v1.md  maixcam2_uart_stability_fix_2026-07-19.md
maixcam2/: app.yaml  main.py  protocol_v1_test.py  云台联调说明.md
reference/单片机主控/QGimbal-master/QGimbal-master/: .gitignore  .mxproject  CMakeLists.txt  QGimbal.ioc  STM32F407XX_FLASH.ld  readme.md
reference/单片机主控/QGimbal-master/QGimbal-master/BSP/: sys_public.h
reference/单片机主控/QGimbal-master/QGimbal-master/UserLib/LetterShell/: CMakeLists.txt  readme.md
reference/单片机主控/QGimbal-master/QGimbal-master/UserLib/LetterShell/Inc/: shell.h  shell_cfg.h  shell_cfg_user.h
reference/单片机主控/QGimbal-master/QGimbal-master/UserLib/LetterShell/Src/: shell.c
reference/视觉/QGimbal-Vision-master-dev/: README.md  main.py
reference/视觉/QGimbal-Vision-master-dev/control/: __init__.py  feedbacker.py  pid.py  serial_stub.py  tracker_control.py
reference/视觉/QGimbal-Vision-master-dev/vision/: __init__.py  rect_detect.py
stm32/: AGENTS.md
stm32/25Qdrive无刷电机/: 25E底盘整理修改.diff  25E零速闭环制动修改.diff
stm32/25Qdrive无刷电机/21F 5.22 （巡线单灰度版本） - 副本/: .gitignore  control_style_reformat.diff
stm32/25Qdrive无刷电机/21F 5.22 （巡线单灰度版本） - 副本/21F/: 云台双环联调使用说明.md
stm32/25Qdrive无刷电机/21F 5.22 （巡线单灰度版本） - 副本/21F/21F/: 21F.ioc  Hardware.lnk  (+1 more)
(+133 files in other folders)
